--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.1
   http: ^0.13.3
+  font_awesome_flutter: ^9.1.0
+  sqflite: ^2.0.0+3
+  path: ^1.8.0
+
 
 dev_dependencies:
   flutter_test:
